[gd_scene load_steps=5 format=3 uid="uid://w14p0oj6jj5w"]

[ext_resource type="Script" path="res://code_editor.gd" id="1_bvjvr"]
[ext_resource type="PackedScene" uid="uid://b2v8sg5vesx2e" path="res://input.tscn" id="2_dpgr0"]
[ext_resource type="PackedScene" uid="uid://ovhge4jm6ich" path="res://output.tscn" id="3_rii6m"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_qwu16"]
number_color = Color(0.913725, 0, 0, 1)
symbol_color = Color(0.678431, 0.384314, 0.603922, 1)
function_color = Color(0.501961, 0.0941176, 0.87451, 1)
member_variable_color = Color(0, 0, 0.72549, 1)

[node name="CodeEditor" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -431.0
offset_right = 481.0
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_bvjvr")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.117647)

[node name="ResizeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="LeftResize" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 100

[node name="Inputs" type="VBoxContainer" parent="LeftResize"]
layout_mode = 2

[node name="LabelPanel" type="PanelContainer" parent="LeftResize/Inputs"]
layout_mode = 2

[node name="Label" type="Label" parent="LeftResize/Inputs/LabelPanel"]
layout_mode = 2
text = "Input"
horizontal_alignment = 1

[node name="Input" parent="LeftResize/Inputs" instance=ExtResource("2_dpgr0")]
layout_mode = 2

[node name="AddInput" type="Button" parent="LeftResize/Inputs"]
layout_mode = 2
text = "+"

[node name="RightResize" type="HSplitContainer" parent="LeftResize"]
layout_mode = 2
split_offset = 700

[node name="CodeResize" type="VSplitContainer" parent="LeftResize/RightResize"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="LeftResize/RightResize/CodeResize"]
layout_mode = 2

[node name="TabBar" type="TabBar" parent="LeftResize/RightResize/CodeResize/PanelContainer"]
layout_mode = 2
tab_count = 2
tab_0/title = "Hello"
tab_1/title = "Wassup"

[node name="CodeButtons" type="HBoxContainer" parent="LeftResize/RightResize/CodeResize/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="Help" type="Button" parent="LeftResize/RightResize/CodeResize/PanelContainer/CodeButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "Help
"

[node name="DeleteEditor" type="Button" parent="LeftResize/RightResize/CodeResize/PanelContainer/CodeButtons"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="CodeEditor" type="CodeEdit" parent="LeftResize/RightResize/CodeResize"]
layout_mode = 2
scroll_smooth = true
minimap_draw = true
minimap_width = 53
syntax_highlighter = SubResource("CodeHighlighter_qwu16")
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
symbol_lookup_on_click = true
line_folding = true
gutters_draw_line_numbers = true
code_completion_enabled = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="Outputs" type="VBoxContainer" parent="LeftResize/RightResize"]
layout_mode = 2

[node name="LabelPanel" type="PanelContainer" parent="LeftResize/RightResize/Outputs"]
layout_mode = 2

[node name="Label" type="Label" parent="LeftResize/RightResize/Outputs/LabelPanel"]
layout_mode = 2
text = "Output
"
horizontal_alignment = 1

[node name="Output" parent="LeftResize/RightResize/Outputs" instance=ExtResource("3_rii6m")]
layout_mode = 2

[node name="AddOutput" type="Button" parent="LeftResize/RightResize/Outputs"]
layout_mode = 2
text = "+"

[connection signal="timeout" from="ResizeTimer" to="." method="_on_resize_timer_timeout"]
[connection signal="dragged" from="LeftResize" to="." method="_on_resize_dragged"]
[connection signal="mouse_entered" from="LeftResize/Inputs" to="." method="_drag_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftResize/Inputs" to="." method="_drag_area_mouse_exited"]
[connection signal="hovered" from="LeftResize/Inputs/Input" to="." method="_on_input_mouse_entered"]
[connection signal="pressed" from="LeftResize/Inputs/AddInput" to="." method="_on_add_input_pressed"]
[connection signal="dragged" from="LeftResize/RightResize" to="." method="_on_resize_dragged"]
[connection signal="dragged" from="LeftResize/RightResize/CodeResize" to="." method="_on_resize_dragged"]
[connection signal="mouse_entered" from="LeftResize/RightResize/CodeResize/PanelContainer/CodeButtons" to="." method="_drag_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftResize/RightResize/CodeResize/PanelContainer/CodeButtons" to="." method="_drag_area_mouse_exited"]
[connection signal="pressed" from="LeftResize/RightResize/CodeResize/PanelContainer/CodeButtons/DeleteEditor" to="." method="_on_delete_editor_pressed"]
[connection signal="mouse_entered" from="LeftResize/RightResize/CodeResize/CodeEditor" to="." method="_on_code_editor_mouse_entered"]
[connection signal="mouse_exited" from="LeftResize/RightResize/CodeResize/CodeEditor" to="." method="_on_code_editor_mouse_exited"]
[connection signal="mouse_entered" from="LeftResize/RightResize/Outputs" to="." method="_drag_area_mouse_entered"]
[connection signal="mouse_exited" from="LeftResize/RightResize/Outputs" to="." method="_drag_area_mouse_exited"]
[connection signal="pressed" from="LeftResize/RightResize/Outputs/Output" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="LeftResize/RightResize/Outputs/AddOutput" to="." method="_on_add_output_pressed"]
